src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>BU_External_Reference__c</fullName>
        <externalId>true</externalId>
        <label>BU External Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Do_Not_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field define if the product will be send to the operational system or not.</description>
        <label>Do Not Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_EDG_Product_Ref__c</fullName>
        <description>EDG Product Reference Code</description>
        <label>EDG Product Ref</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Hidden_In_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field define it the product will be displayed in the PDF or not.</description>
        <label>Is Hidden In PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Line_Order__c</fullName>
        <label>Line Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_MUC__c</fullName>
        <label>MUC</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Minimum_Fee__c</fullName>
        <label>Minimum Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Service_Category__c</fullName>
        <label>Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>[Other / Specify]</fullName>
                </value>
                <value>
                    <fullName>Communication on product</fullName>
                </value>
                <value>
                    <fullName>Customer service call</fullName>
                </value>
                <value>
                    <fullName>Invoice Layout</fullName>
                </value>
                <value>
                    <fullName>Invoice Publication</fullName>
                </value>
                <value>
                    <fullName>Invoice Support</fullName>
                </value>
                <value>
                    <fullName>Invoicing Payment</fullName>
                </value>
                <value>
                    <fullName>Invoicing Payment Method</fullName>
                </value>
                <value>
                    <fullName>Invoicing Payment Term</fullName>
                </value>
                <value>
                    <fullName>Invoicing Periodicity</fullName>
                </value>
                <value>
                    <fullName>Invoicing processing</fullName>
                </value>
                <value>
                    <fullName>Mail Notification</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>POS / terminal</fullName>
                </value>
                <value>
                    <fullName>Promotional Campaign</fullName>
                </value>
                <value>
                    <fullName>Reimbursement  Payment</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Payment Method</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Payment Term</fullName>
                </value>
                <value>
                    <fullName>Reimbursement processing</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Trigger</fullName>
                </value>
                <value>
                    <fullName>SMS Notification</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Transaction processing</fullName>
                </value>
                <value>
                    <fullName>Transaction Processing Fee</fullName>
                </value>
                <value>
                    <fullName>Transaction Statement Layout</fullName>
                </value>
                <value>
                    <fullName>Transaction Statement Periodicity</fullName>
                </value>
                <value>
                    <fullName>Transaction Statement Publication</fullName>
                </value>
                <value>
                    <fullName>Transaction Statement Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>applicable_service</fullName>
                    <label>applicable service</label>
                </value>
                <value>
                    <fullName>Billable_services</fullName>
                    <label>Billable services</label>
                </value>
                <value>
                    <fullName>Card_replacement_service</fullName>
                    <label>Card replacement service</label>
                </value>
                <value>
                    <fullName>Card_service</fullName>
                    <label>Card service</label>
                </value>
                <value>
                    <fullName>Communication fee</fullName>
                    <isActive>false</isActive>
                    <label>Communication fee</label>
                </value>
                <value>
                    <fullName>Crediting_service</fullName>
                    <label>Crediting service</label>
                </value>
                <value>
                    <fullName>Delivery_service</fullName>
                    <label>Delivery service</label>
                </value>
                <value>
                    <fullName>Invoice_service</fullName>
                    <label>Invoice service</label>
                </value>
                <value>
                    <fullName>Loading_service</fullName>
                    <label>Loading service</label>
                </value>
                <value>
                    <fullName>Merchant Invoicing</fullName>
                    <isActive>false</isActive>
                    <label>Merchant Invoicing</label>
                </value>
                <value>
                    <fullName>Merchant Reimbursement</fullName>
                    <isActive>false</isActive>
                    <label>Merchant Reimbursement</label>
                </value>
                <value>
                    <fullName>Network access</fullName>
                    <isActive>false</isActive>
                    <label>Network access</label>
                </value>
                <value>
                    <fullName>Network Fee</fullName>
                    <isActive>false</isActive>
                    <label>Network Fee</label>
                </value>
                <value>
                    <fullName>Order_service</fullName>
                    <label>Order service</label>
                </value>
                <value>
                    <fullName>Other fee</fullName>
                    <isActive>false</isActive>
                    <label>Other fee</label>
                </value>
                <value>
                    <fullName>Payment_service</fullName>
                    <label>Payment service</label>
                </value>
                <value>
                    <fullName>Report Management</fullName>
                    <isActive>false</isActive>
                    <label>Report Management</label>
                </value>
                <value>
                    <fullName>Shipping_to_distribution_point_service</fullName>
                    <label>Shipping to distribution point service</label>
                </value>
                <value>
                    <fullName>Shipping_to_user_service</fullName>
                    <label>Shipping to user service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Solution_Code__c</fullName>
        <formula>IF(
BEGINS(ER_Solution__r.ProductCode, &quot;ERHU&quot;),  
IF(OR(BEGINS(ProductCode, &quot;SRV_PART&quot;),CONTAINS(ProductCode, &quot;Bonus&quot;)), &quot;Bonus_Card&quot;, &quot;Gift@Schooling Card Hungary&quot;) ,
ER_Solution__r.ProductCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Solution_Type__c</fullName>
        <label>Solution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paper Voucher</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>E-Ticket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Acronym__c</fullName>
        <label>Acronym</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRF</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>PPL</fullName>
                </value>
                <value>
                    <fullName>TSF</fullName>
                </value>
                <value>
                    <fullName>TW</fullName>
                </value>
                <value>
                    <fullName>ELS</fullName>
                </value>
                <value>
                    <fullName>CVE</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
                <value>
                    <fullName>TRC</fullName>
                </value>
                <value>
                    <fullName>CW</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>TT</fullName>
                </value>
                <value>
                    <fullName>TG</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
                <value>
                    <fullName>DT</fullName>
                </value>
                <value>
                    <fullName>DP</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>UP</fullName>
                </value>
                <value>
                    <fullName>BV</fullName>
                </value>
                <value>
                    <fullName>FG</fullName>
                </value>
                <value>
                    <fullName>TD</fullName>
                </value>
                <value>
                    <fullName>SF</fullName>
                </value>
                <value>
                    <fullName>SV</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>CTC</fullName>
                </value>
                <value>
                    <fullName>TRS</fullName>
                </value>
                <value>
                    <fullName>CTS</fullName>
                </value>
                <value>
                    <fullName>SVV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Clear_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clear Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Context__c</fullName>
        <label>Context</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Meal Ticket</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Compliments</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Social Voucher</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Person Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Data_Type_to_Display__c</fullName>
        <label>Data Type to Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Discount_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Emitted_Ticket_Number__c</fullName>
        <label>Emitted Ticket Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Frequence_Order_Type__c</fullName>
        <label>Frequence Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Order_Frequence_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Invoice_Activity_Detail__c</fullName>
        <label>Invoice Activity Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Invoice_Detail</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Invoicing_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoicing Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Papier</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Expense Management</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Incentive</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Card</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>PSP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Not_Standard_VAT__c</fullName>
        <label>Not Standard VAT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Not_Standard_VAT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Opening_Outcome_New__c</fullName>
        <label>Opening Outcome New</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Opening_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Print_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Printout_Copies_Employee_Number__c</fullName>
        <label>Printout Copies/Employee Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Provider_Code__c</fullName>
        <label>Provider Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>DHL</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>TAKE AGENZIA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Single_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Single_Series__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Series</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Stamp_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stamp Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Stock__c</fullName>
        <label>Stock</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>CUSTOMER IS NOT A STOCK</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>DUMMY FOR CUSTOMER ORDER STOCK</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>CUSTOMER ORDER WITH EITHER TRADITIONAL FROM STOCK</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>WITH ONLY A CUSTOMER ORDER STOCK</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Transport_Cost_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transport Cost Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Transport_Cost__c</fullName>
        <label>Transport Cost</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Transport_Cost</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>IT_Acronym__c</columns>
        <columns>IT_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Solutions and Services</label>
    </listViews>
    <listViews>
        <fullName>CZ_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>ER_Solution__c</columns>
        <columns>ER_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>ER_Minimum_Fee__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>ER_Line_Order__c</columns>
        <columns>ER_Do_Not_Synchronize__c</columns>
        <columns>ER_Hidden_In_PDF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>CZ</value>
        </filters>
        <label>Czech products</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Czech_Republic</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HU_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>ER_Solution__c</columns>
        <columns>ER_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>ER_Line_Order__c</columns>
        <columns>ER_Do_Not_Synchronize__c</columns>
        <columns>ER_Hidden_In_PDF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>HU</value>
        </filters>
        <label>Hungary Products</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>HUN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>ER_Solution__c</columns>
        <columns>ER_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>ER_Line_Order__c</columns>
        <columns>ER_Do_Not_Synchronize__c</columns>
        <columns>ER_Hidden_In_PDF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>Italian Products</label>
    </listViews>
    <listViews>
        <fullName>PL_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>ER_Solution__c</columns>
        <columns>ER_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>ER_Line_Order__c</columns>
        <columns>ER_Do_Not_Synchronize__c</columns>
        <columns>ER_Hidden_In_PDF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <label>Poland Products</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Poland</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Service_List</fullName>
        <columns>ER_Solution__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>ER_Line_Order__c</columns>
        <columns>ER_Business_Unit__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Type__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>Service List</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Solution_List</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>ER_Line_Order__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Type__c</field>
            <operation>equals</operation>
            <value>Solution</value>
        </filters>
        <label>Solution List</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>